5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1734_2498.log
== TEST (2019-05-10 12:31:15) 
-- CODE:
HabA = int(input("Digite o numero de habitantes Cidade A: "))
HabB = int(input("Digite o numero de habitantes Cidade B: "))
percA = float(input("digite percentual de crescimento da cidade A: "))
percB= float(input("digite percentual de crescimento da cidade B: "))

anos = 0
A = HabA
B = HabB

while (HabA < HabB) :
	A = HabA +((HabA+percA)/100)
	B = HabB +((HabB+percB)/100)
	anos = anos + 1
	
print(anos)
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:33:00) 
-- CODE:
HabA = int(input("Digite o numero de habitantes Cidade A: "))
HabB = int(input("Digite o numero de habitantes Cidade B: "))
percA = float(input("digite percentual de crescimento da cidade A: "))
percB= float(input("digite percentual de crescimento da cidade B: "))

anos = 0
A = HabA
B = HabB

while (HabA < HabB) :
	A = HabA +((HabA*percA)/100)
	B = HabB +((HabB*percB)/100)
	anos = anos + 1
	
print(anos)
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:34:54) 
-- CODE:
HabA = int(input("Digite o numero de habitantes Cidade A: "))
HabB = int(input("Digite o numero de habitantes Cidade B: "))
percA = float(input("digite percentual de crescimento da cidade A: "))
percB= float(input("digite percentual de crescimento da cidade B: "))

anos = 0
A = HabA
B = HabB

while (HabA < HabB) :
	if (HabA < HabB):
		A = HabA +((HabA*percA)/100)
		B = HabB +((HabB*percB)/100)
		anos = anos + 1
	
print(anos)
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:36:56) 
-- CODE:
HabA = int(input("Digite o numero de habitantes Cidade A: "))
HabB = int(input("Digite o numero de habitantes Cidade B: "))
percA = float(input("digite percentual de crescimento da cidade A: "))
percB= float(input("digite percentual de crescimento da cidade B: "))

anos = 0
A = 0
B = 0

while (HabA < HabB) :
	if (HabA < HabB):
		A = HabA +((HabA*percA)/100)
		B = HabB +((HabB*percB)/100)
		anos = anos + 1
	
print(anos)
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:38:08) 
-- CODE:
HabA = int(input("Digite o numero de habitantes Cidade A: "))
HabB = int(input("Digite o numero de habitantes Cidade B: "))
percA = float(input("digite percentual de crescimento da cidade A: "))
percB= float(input("digite percentual de crescimento da cidade B: "))

anos = 0
A = 0
B = 0

while (A<B):
	if (HabA < HabB):
		A = HabA +((HabA*percA)/100)
		B = HabB +((HabB*percB)/100)
		anos = anos + 1
	
print(anos)
	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:39:49) 
-- CODE:
HabA = int(input("Digite o numero de habitantes Cidade A: "))
HabB = int(input("Digite o numero de habitantes Cidade B: "))
percA = float(input("digite percentual de crescimento da cidade A: "))
percB= float(input("digite percentual de crescimento da cidade B: "))

anos = 0
A = HabA
B = HabB

while (A < B)
	if (HabA < HabB):
		A = A +((HabA*percA)/100)
		B = B+((HabB*percB)/100)
		anos = anos + 1
	
print(anos)
	

-- ERROR:
File "XXXX", line 10
    while (A < B)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:39:54) 
-- CODE:
HabA = int(input("Digite o numero de habitantes Cidade A: "))
HabB = int(input("Digite o numero de habitantes Cidade B: "))
percA = float(input("digite percentual de crescimento da cidade A: "))
percB= float(input("digite percentual de crescimento da cidade B: "))

anos = 0
A = HabA
B = HabB

while (A < B):
	if (HabA < HabB):
		A = A +((HabA*percA)/100)
		B = B+((HabB*percB)/100)
		anos = anos + 1
	
print(anos)
	

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 12:41:19) 
-- CODE:
HabA = int(input("Digite o numero de habitantes Cidade A: "))
HabB = int(input("Digite o numero de habitantes Cidade B: "))
percA = float(input("digite percentual de crescimento da cidade A: "))
percB= float(input("digite percentual de crescimento da cidade B: "))

anos = 0
A = HabA
B = HabB

while (A < B):
	if (HabA < HabB):
		A = A +((A*percA)/100)
		B = B+((B*percB)/100)
		anos = anos + 1
	
print(anos)
	

-- EXECUTION TIME:
0.295569
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
